@@ -498,7 +498,6 @@ end;
 val _ = Context.>> (Context.map_theory
  (register_config Ast.trace_raw #>
   register_config Ast.stats_raw #>
-  register_config Syntax.positions_raw #>
   register_config Printer.show_brackets_raw #>
   register_config Printer.show_sorts_raw #>
   register_config Printer.show_types_raw #>
